--- a/test.html
+++ b/test.html
@@ -1,1 +1,8 @@
 <h1>test</h1>
+<script>
+  
+  var meta = document.createElement('meta');
+meta.httpEquiv = "X-UA-Compatible";
+meta.content = "IE=edge";
+document.getElementsByTagName('head')[0].appendChild(meta);
+</script>
