--- a/test.html
+++ b/test.html
@@ -47,8 +47,10 @@
                 }
             }
             Add_MetaOG("og:title", og_title);
-            Add_MetaOG("og:description", og_description)
-            Add_MetaOG("og:image", "https://www.cpf.gov.sg/Members/_catalogs/masterpage/CPFB/Images/cpf_logo_icon.png")
+            Add_MetaOG("og:description", og_description);
+            Add_MetaOG("og:image", "https://www.cpf.gov.sg/Members/_catalogs/masterpage/CPFB/Images/cpf_logo_icon.png");
+
+            ScrollToAnchor();
         })
     </script>
     <style>
