--- a/share.html
+++ b/share.html
@@ -1,31 +1,27 @@
 <html>
 <head>
-    <title>Your Website Title</title>
-    <!-- You can use Open Graph tags to customize link previews.
-    Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
-    <meta property="og:url" content="https://www.your-domain.com/your-page.html" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Your Website Title" />
-    <meta property="og:description" content="Your description" />
-    <meta property="og:image" content="https://www.your-domain.com/path/image.jpg" />
-    <script src="https://connect.facebook.net/signals/config/306633640159069?v=2.8.45&amp;r=stable" async=""></script>
-    <script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script>
-    <link rel="stylesheet" href="https://www.mom.gov.sg/html/mom/styles/main.css">
+    <title>My Share Page</title>
+    <meta property="og:title" content="Share Page" />
+    <meta property="og:description" content="Share description" />
+    <meta property="og:image" content="https://royston1978.github.io/website1/images/logo.png" />
 </head>
 <body>
-    <div id="fb-root"></div>
-    <script>
-    (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
+    <div style="padding: 150px 150px 150px 150px">
+        <div style="text-align: right">
+            <span>Share this page</span>
 
-    <div class="fb-share-button"
-         data-href="https://www.your-domain.com/your-page.html"
-         data-layout="button_count">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://github.com/royston1978/website1/edit/master/share.html">
+                <img src="images/icon-share-fb.png" border="0" />
+            </a>
+
+            <a href="https://twitter.com/intent/tweet?text=some textd&url=https://github.com/royston1978/website1/edit/master/share.html&via=Github&hashtags=Github_Hashtag">
+                <img src="images/icon-share-tw.png" border="0" />
+            </a>
+
+            <a href="mailto:?subject=Test Subject&body=https://github.com/royston1978/website1/edit/master/share.html">
+                <img src="images/icon-share-email.png" border="0" />
+            </a>
+        </div>
     </div>
 
 
