--- a/share.html
+++ b/share.html
@@ -10,15 +10,15 @@
         <div style="text-align: right">
             <span>Share this page</span>
 
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://github.com/royston1978/website1/edit/master/share.html">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://royston1978.github.io/website1/share.html">
                 <img src="images/icon-share-fb.png" border="0" />
             </a>
 
-            <a href="https://twitter.com/intent/tweet?text=some textd&url=https://github.com/royston1978/website1/edit/master/share.html&via=Github&hashtags=Github_Hashtag">
+            <a href="https://twitter.com/intent/tweet?text=some textd&url=https://royston1978.github.io/website1/share.html&via=Github&hashtags=Github_Hashtag">
                 <img src="images/icon-share-tw.png" border="0" />
             </a>
 
-            <a href="mailto:?subject=Test Subject&body=https://github.com/royston1978/website1/edit/master/share.html">
+            <a href="mailto:?subject=Test Subject&body=https://royston1978.github.io/website1/share.html">
                 <img src="images/icon-share-email.png" border="0" />
             </a>
         </div>
