--- a/share.html
+++ b/share.html
@@ -1,9 +1,9 @@
 <html>
 <head>
     <title>My Share Page</title>
-    <meta property="og:title" content="Share Page" />
-    <meta property="og:description" content="Share description" />
-    <meta property="og:image" content="https://royston1978.github.io/website1/images/logo.png" />
+    <meta property="og:title" content="Share Page" >
+    <meta property="og:description" content="Share description" >
+    <meta property="og:image" content="https://royston1978.github.io/website1/images/logo.png" >
 </head>
 <body>
     <div style="padding: 150px 150px 150px 150px">
