--- a/share.html
+++ b/share.html
@@ -2,7 +2,7 @@
 <head>
     <title>My Share Page</title>
     <meta property="og:title" content="Share Page" >
-    <meta property="og:description" content="Share description" >
+    <meta property="og:description" content="<meta property="og:description" content="Your source for services and information on employment matters in Singapore." >
     <meta property="og:image" content="https://royston1978.github.io/website1/images/logo.png" >
 </head>
 <body>
