--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
         <script src="https://assets.codepen.io/16327/ScrollSmoother.min.js"></script>
         --> 
-        <script src="/jquery-3.6.1.min.js"></script>
-        <script src="/js/lottie.min.js"></script>
-        <script src="/js/gsap.min.js"></script>
-        <script src="/js/ScrollTrigger.min.js"></script>
+        <script src="jquery-3.6.1.min.js"></script>
+        <script src="js/lottie.min.js"></script>
+        <script src="js/gsap.min.js"></script>
+        <script src="js/ScrollTrigger.min.js"></script>
       
         <script src="app_hsj.js"></script>
     </body>
