--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
            <div 
             class="cmp-scrollytelling-animation animation-75bd0adb-3064-44cf-9634-50a0d14d78e2 cmp-scrollytelling-animation__background" 
             data-scrollytelling-target="animation-75bd0adb-3064-44cf-9634-50a0d14d78e2" 
-            data-scrollytelling-path-desktop="/animations/hsj-4/HSJ_desktop_4.json" 
-            data-scrollytelling-path-mobile="/animations/hsj-4/HSJ_mobile_4v3.json" 
+            data-scrollytelling-path-desktop="animations/hsj-4/HSJ_desktop_4.json" 
+            data-scrollytelling-path-mobile="animations/hsj-4/HSJ_mobile_4v3.json" 
             data-scrollytelling-aspectratio="xMidYMin meet" 
-            data-scrollytelling-backgroundimg-desktop="/img/CPF-BG.jpg" 
-            data-scrollytelling-backgroundimg-mobile="/img/CPF-BG.jpg" 
+            data-scrollytelling-backgroundimg-desktop="img/CPF-BG.jpg" 
+            data-scrollytelling-backgroundimg-mobile="img/CPF-BG.jpg" 
             data-scrollytelling-startingframe="10" data-scrollytelling-duration-desktop="1.0" 
             data-scrollytelling-duration-mobile="1.0" 
             data-scrollytelling-start1="0" 
