--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,8 @@
         <title>Senior Support</title>
     </head>
     <body>
+        <div id="smooth-wrapper">
+            <div id="smooth-content">
         <div class="scrollytelling-animation animation-wrapper">
            <div 
             class="cmp-scrollytelling-animation animation-75bd0adb-3064-44cf-9634-50a0d14d78e2 cmp-scrollytelling-animation__background" 
@@ -27,6 +29,8 @@
             data-scrollytelling-end2-mobile="0" 
            ></div>
     </div>
+</div>
+</div>
      <!--   
     <script src=" https://code.jquery.com/jquery-3.6.3.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js""></script>
@@ -38,7 +42,8 @@
         <script src="js/lottie.min.js"></script>
         <script src="js/gsap.min.js"></script>
         <script src="js/ScrollTrigger.min.js"></script>
+        <script src="js/ScrollSmoother.min.js"></script>
       
-        <script src="app_hsj1.js"></script>
+        <script src="app_hsj2.js"></script>
     </body>
 </html>
